namespaces/network/traefik/traefik-dashboard.ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: network
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: HostRegexp(`traefik.home.tehmessiah.nl`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      services:
        - kind: TraefikService
          name: api@internal
  tls: { }
